--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "bootstrap": "^5.0.2",
     "mongodb": "^3.5.9",
     "next": "latest",
     "react": "^17.0.2",
